[package]
name = "ava-config"
description = "Configuration management and credential storage"
version = "2.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
dirs.workspace = true
reqwest = { version = "0.12", features = ["json"] }
toml.workspace = true
tracing.workspace = true
keyring = { version = "3", optional = true }
aes-gcm = { version = "0.10", optional = true }
pbkdf2 = { version = "0.12", features = ["simple"], optional = true }
sha2 = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }
rpassword = { version = "7", optional = true }
ava-types = { path = "../ava-types" }
ava-auth = { path = "../ava-auth" }

[features]
default = ["keychain"]
keychain = ["dep:keyring", "dep:aes-gcm", "dep:pbkdf2", "dep:sha2", "dep:rand", "dep:base64", "dep:rpassword"]

[dev-dependencies]
tempfile = "3.0"
