[package]
name = "ava-context"
description = "Token tracking and context condensation"
version = "2.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
regex = "1"
ava-types = { path = "../ava-types" }

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
