[package]
name = "ava-context"
description = "Token tracking and context condensation"
version = "3.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
regex = "1"
ava-types = { path = "../ava-types" }
tracing.workspace = true
tiktoken-rs = "0.9"
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
