[package]
name = "ava-control-plane"
description = "Shared control-plane contracts and orchestration seams"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
ava-types = { path = "../ava-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
