[package]
name = "ava-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
sqlx.workspace = true
ava-types = { path = "../ava-types" }

[dev-dependencies]
tempfile = "3.0"
