[package]
name = "ava-db"
description = "SQLite database layer for sessions and messages"
version = "2.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
sqlx.workspace = true
ava-types = { path = "../ava-types" }

[dev-dependencies]
tempfile = "3.0"
