[package]
name = "ava-extensions"
description = "Extension system with hooks and native/WASM loaders"
version = "3.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
libloading = "0.8"
tracing.workspace = true
dirs-next = "2"

[dev-dependencies]
tempfile.workspace = true
