[package]
name = "ava-extensions"
description = "Extension system with hooks and native/WASM loaders"
version = "3.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
libloading = "0.8"
tracing.workspace = true
dirs-next = "2"
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
chrono.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
