[package]
name = "ava-hq"
description = "Multi-agent orchestration with domain-specific leads (HQ Director pattern)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
ava-agent = { path = "../ava-agent" }
ava-acp = { path = "../ava-acp" }
ava-context = { path = "../ava-context" }
ava-llm = { path = "../ava-llm" }
ava-platform = { path = "../ava-platform" }
ava-tools = { path = "../ava-tools" }
ava-types = { path = "../ava-types" }
chrono.workspace = true
fs2 = "0.4"
regex = "1"
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
uuid.workspace = true

[features]
default = []

[dev-dependencies]
tempfile = "3"
