[package]
name = "ava-llm"
description = "Unified LLM provider interface with routing and circuit breaking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
ava-auth = { path = "../ava-auth" }
ava-config = { path = "../ava-config" }
ava-types = { path = "../ava-types" }
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
rand = "0.8"

