[package]
name = "ava-logger"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
ava-types = { path = "../ava-types" }

[dev-dependencies]
tempfile = "3.0"
