[package]
name = "ava-lsp"
description = "LSP client for language server integration"
version = "2.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
lsp-types = "0.97"
