[package]
name = "ava-mcp"
description = "Model Context Protocol client and server implementation"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
ava-tools = { path = "../ava-tools" }
ava-types = { path = "../ava-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
