[package]
name = "ava-mcp"
description = "Model Context Protocol client and server implementation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
ava-tools = { path = "../ava-tools" }
ava-types = { path = "../ava-types" }
bytes = "1"
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
base64 = "0.22"
dirs.workspace = true
open = "5"
rand = "0.9"
sha2 = "0.10"
url = "2"
urlencoding = "2"

[dev-dependencies]
tempfile.workspace = true
