[package]
name = "ava-memory"
description = "Persistent memory with SQLite and full-text search"
version = "2.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.0"
