[package]
name = "ava-permissions"
description = "Permission system with rule evaluation and risk classification"
version = "2.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.22"
tree-sitter-bash = "0.21"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
tracing.workspace = true
