[package]
name = "ava-permissions"
description = "Permission system with rule evaluation and risk classification"
version = "3.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.22"
tree-sitter-bash = "0.21"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["time"] }
sqlx.workspace = true
thiserror.workspace = true
unicode-normalization = "0.1"
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tempfile = "3.0"
