[package]
name = "ava-platform"
description = "Platform abstraction for file system and shell operations"
version = "2.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-stream.workspace = true
chrono.workspace = true
ava-types = { path = "../ava-types" }
tracing.workspace = true

[dev-dependencies]
tempfile = "3.0"
