[package]
name = "ava-platform"
description = "Platform abstraction for file system and shell operations"
version = "0.6.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-stream.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
ava-types = { path = "../ava-types" }
tracing.workspace = true

[dev-dependencies]
tempfile = "3.0"
