[package]
name = "ava-plugin"
version = "2.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
toml.workspace = true
dirs.workspace = true
ava-types = { path = "../ava-types" }

[dev-dependencies]
tempfile = "3.0"
