[package]
name = "ava-review"
description = "Shared review subsystem for AVA CLI and HQ"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
ava-agent = { path = "../ava-agent" }
ava-context = { path = "../ava-context" }
ava-llm = { path = "../ava-llm" }
ava-platform = { path = "../ava-platform" }
ava-tools = { path = "../ava-tools" }
ava-types = { path = "../ava-types" }
futures.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
