[package]
name = "ava-sandbox"
description = "OS-level sandbox for command execution"
version = "0.6.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
